<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_15"
        android:text="Layout Example" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_relative"
            style="@style/RoundedButton"
            android:text="@string/relative" />

        <Button
            android:id="@+id/btn_linear"
            style="@style/RoundedButton"
            android:text="@string/linear" />

        <Button
            android:id="@+id/btn_contraint"
            style="@style/RoundedButton"
            android:text="@string/constrain" />

        <Button
            android:id="@+id/btn_frame"
            style="@style/RoundedButton"
            android:text="@string/frame" />

        <Button
            android:id="@+id/btn_table"
            style="@style/RoundedButton"
            android:text="@string/table" />

        <Button
            android:id="@+id/btn_grid"
            style="@style/RoundedButton"
            android:text="@string/grid" />

    </LinearLayout>
</RelativeLayout>
